#8.2 [OBEZS] Fix path to secret.yaml

--- a/.github/workflows/update-secrets.yaml
+++ b/.github/workflows/update-secrets.yaml
@@ -23,15 +23,16 @@ jobs:
           wget -qO- https://github.com/getsops/sops/releases/download/v3.8.1/sops-v3.8.1.linux.amd64 > sops
           chmod +x sops
           sudo mv sops /usr/local/bin/
+          echo $PATH $PWD
 
       - name: Update Image Tag
         uses: mikefarah/yq@master
         with:
-          cmd: yq eval -i '.data.token=env(TELE_TOKEN)' secret.yaml
+          cmd: yq eval -i '.data.token=env(TELE_TOKEN)' clusters/demo/secret.yaml
 
       - name: Decrypt and Update Secrets
         run: |
-          sops -e -gcp-kms projects/devops-prom/locations/global/keyRings/sops-flux2/cryptoKeys/sops-key-flux --encrypted-regex '^(token)$' secret.yaml > clusters/demo/secret-enc1.yaml
+          sops -e -gcp-kms projects/devops-prom/locations/global/keyRings/sops-flux2/cryptoKeys/sops-key-flux --encrypted-regex '^(token)$' clusters/demo/secret.yaml > clusters/demo/secret-enc1.yaml
           
       - name: Commit Changes
         run: |
