#8.2 [OBEZS] Fix env for yq

--- a/.github/workflows/update-secrets.yaml
+++ b/.github/workflows/update-secrets.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Update Image Tag
         uses: mikefarah/yq@master
         with:
-          cmd: yq eval -i '.data.token=env(TELE_TOKEN)' clusters/demo/secret.yaml
+          cmd: yq eval -i '.data.token=$TELE_TOKEN' clusters/demo/secret.yaml
 
       - name: Decrypt and Update Secrets
         run: |
