--- a/.github/workflows/update-secrets.yaml
+++ b/.github/workflows/update-secrets.yaml
@@ -36,8 +36,8 @@ jobs:
           
       - name: Commit Changes
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add clusters/demo/secre-enc1.yaml
           git commit -m "Update secret-enc1.yaml"
           git push
