#8.2 [OBEZS] Fix secret.yaml

--- a/.github/workflows/update-secrets.yaml
+++ b/.github/workflows/update-secrets.yaml
@@ -32,12 +32,12 @@ jobs:
 
       - name: Decrypt and Update Secrets
         run: |
-          sops -e -gcp-kms projects/devops-prom/locations/global/keyRings/sops-flux2/cryptoKeys/sops-key-flux --encrypted-regex '^(token)$' clusters/demo/secret.yaml > clusters/demo/secret-enc1.yaml
+          sops -e -gcp-kms projects/devops-prom/locations/global/keyRings/sops-flux2/cryptoKeys/sops-key-flux --encrypted-regex '^(token)$' clusters/demo/secret.yaml > clusters/demo/secret-enc.yaml
           
       - name: Commit Changes
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add clusters/demo/secret-enc1.yaml
-          git commit -m "Update secret-enc1.yaml"
+          git add clusters/demo/secret-enc.yaml
+          git commit -m "Update secret-enc.yaml"
           git push
