#8.2 [OBEZS] Added get secrets from GCP Secret Manager

--- a/.github/workflows/update-secrets.yaml
+++ b/.github/workflows/update-secrets.yaml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'clusters/demo/secret.yaml'
 
 jobs:
   update-secrets:
@@ -24,6 +26,10 @@ jobs:
           chmod +x sops
           sudo mv sops /usr/local/bin/
           echo $PATH $PWD
+    
+      - name: Retrieve Secret from GCP Secret Manager
+        run: |
+          export TELE_TOKEN=$(gcloud secrets versions access 1 --secret=TELE_TOKEN)
 
       - name: Update Image Tag
         uses: mikefarah/yq@master
