--- a/.github/workflows/update-secrets.yaml
+++ b/.github/workflows/update-secrets.yaml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - 'clusters/demo/secret.yml'
+      - 'templates/demo/secret.yaml'
 
 jobs:
   update-secrets:
@@ -35,11 +35,11 @@ jobs:
       - name: Update Image Tag
         uses: mikefarah/yq@master
         with:
-          cmd: yq eval -i '.data.token=$TELE_TOKEN' clusters/demo/secret.yml
+          cmd: yq eval -i '.data.token=$TELE_TOKEN' templates/demo/secret.yaml
 
       - name: Decrypt and Update Secrets
         run: |
-          sops -e -gcp-kms projects/devops-prom/locations/global/keyRings/sops-flux2/cryptoKeys/sops-key-flux --encrypted-regex '^(token)$' clusters/demo/secret.yml > clusters/demo/secret-enc.yaml
+          sops -e -gcp-kms projects/devops-prom/locations/global/keyRings/sops-flux2/cryptoKeys/sops-key-flux --encrypted-regex '^(token)$' templates/demo/secret.yaml > clusters/demo/secret-enc.yaml
           
       - name: Commit Changes
         run: |
