--- a/.github/workflows/update-secrets.yaml
+++ b/.github/workflows/update-secrets.yaml
@@ -5,8 +5,8 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'templates/demo/secret.yaml'
+    # paths:
+    #   - 'templates/demo/secret.yaml'
 
 jobs:
   update-secrets:
